<?xml version="1.0"?>
<package format="2">
  <name>udp_ros</name>
  <version>0.0.0</version>
  <description>The udp_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="bognik3@gmail.com">Nikita Boguslavskii</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/udp_ros</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="dimitriasaliba@gmail.com">Dimitri Saliba</author>
  <author email="bognik3@gmail.com">Nikita Boguslavskii</author>


  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
